--- a/style.css
+++ b/style.css
@@ -33,5 +33,9 @@ p{
 }
 #last{
         height:auto;
-        width:100px;
+        width:50px;
+}
+#hi{
+        height:auto;
+        width: 50px;
 }
