--- a/style.css
+++ b/style.css
@@ -37,5 +37,9 @@ p{
 }
 #hi{
         height:auto;
-        width: 50px;
+        width:50px;
+}
+#first{
+        height:auto;
+        width:50px;
 }
