--- a/style.css
+++ b/style.css
@@ -33,13 +33,13 @@ p{
 }
 #last{
         height:auto;
-        width:50px;
+        width:20%;
 }
 #hi{
         height:auto;
-        width:10px;
+        width:25%;
 }
 #first{
         height:auto;
-        width:50px;
+        width:50%;
 }
