--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ h1{
 }
 p{
         font-size:70px;
-        color:#8b94af;
+        color:#5f6268;
 }
 @keyframes swageffect{
   0%  {color:#ff89ed;}
