--- a/style.css
+++ b/style.css
@@ -35,11 +35,13 @@ p{
 #last{
         height:auto;
         width:20%;
+        margin:50px;
 }
 #hi{
         height:auto;
         width:25%;
         transform: rotate(270deg);
+        margin: 100px;
 }
 #first{
         height:auto;
