--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ p{
         height:auto;
         width:25%;
         transform: rotate(270deg);
-        margin: 150px;
+        margin-left: 200px;
 }
 #first{
         height:auto;
