--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 h1{
         font-size:90px;
         color:#7b708e;
+        text-align: center;
 }
 p{
         font-size:70px;
@@ -35,8 +36,8 @@ p{
 #last{
         height:auto;
         width:20%;
-        transform: rotate(100deg);
-        margin:20px;
+        transform: rotate(120deg);
+        margin:80px;
 }
 #hi{
         height:auto;
