--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ p{
         height:auto;
         width:20%;
         transform: rotate(15deg);
-        margin-left: :490px;
+        margin-left:490px;
         top: -110;
 }
 #hi{
