--- a/style.css
+++ b/style.css
@@ -43,12 +43,12 @@ p{
 #dog{
         height:auto;
         width:50%;
-        transform: rotate(490);
+        transform: rotate(490deg);
         margin-left: 150px;
 }
 #okay{
         height: auto;
-        width: 20%
+        width: 20%;
 }
 #bye{
         height: auto;
@@ -60,7 +60,7 @@ body{
 li{
         color:#ad6da4;
         height:auto;
-        width: 25%
+        width: 25%;
 }
 #pie{
         margin-left: 10px;
