--- a/style.css
+++ b/style.css
@@ -64,7 +64,12 @@ li{
 }
 #pie{
         margin-left: 10px;
+        color:#2e227a;
 }
 #cake{
         margin-left: 10px;
+        color:#2e227a;
+}
+#monkey{
+        color:#2e227a;
 }
