--- a/style.css
+++ b/style.css
@@ -36,13 +36,13 @@ p{
 
 #cat{
         height:auto;
-        width:25%;
+        width:20%;
         transform: rotate(25deg);
         margin-left: 400px;
 }
 #dog{
         height:auto;
-        width:25%;
+        width:20%;
         transform: rotate(250deg);
         margin-left: 150px;
 }
@@ -72,4 +72,79 @@ li{
 }
 #monkey{
         color:#2e227a;
+}
+@keyframes swageffect{
+  0%  {color:#ff89ed;}
+ 25%  {color:#f5ff89;}
+ 50%  {color:#538ae2;}
+ 75%  {color:#89ff9d;}
+ 100% {color:#ff89ed;}
+}
+@-webkit-keyframes swageffect{
+    0%  {color:#ff89ed;}
+   25%  {color:#f5ff89;}
+   50%  {color:#538ae2;}
+   75%  {color:#89ff9d;}
+   100% {color:#ff89ed;}
+}
+#monkey{
+    -webkit-animation-name: swageffect; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 1s;
+    animation-name: swageffect;
+    font-size: 60px;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    font-size:70px;
+    color:#538ae2;
+}
+@keyframes swageffect{
+  0%  {color:#ff89ed;}
+ 25%  {color:#f5ff89;}
+ 50%  {color:#538ae2;}
+ 75%  {color:#89ff9d;}
+ 100% {color:#ff89ed;}
+}
+@-webkit-keyframes swageffect{
+    0%  {color:#ff89ed;}
+   25%  {color:#f5ff89;}
+   50%  {color:#538ae2;}
+   75%  {color:#89ff9d;}
+   100% {color:#ff89ed;}
+}
+#pie{
+    -webkit-animation-name: swageffect; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 1s;
+    animation-name: swageffect;
+    font-size: 60px;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    font-size:70px;
+    color:#538ae2;
+}
+@keyframes swageffect{
+  0%  {color:#ff89ed;}
+ 25%  {color:#f5ff89;}
+ 50%  {color:#538ae2;}
+ 75%  {color:#89ff9d;}
+ 100% {color:#ff89ed;}
+}
+@-webkit-keyframes swageffect{
+    0%  {color:#ff89ed;}
+   25%  {color:#f5ff89;}
+   50%  {color:#538ae2;}
+   75%  {color:#89ff9d;}
+   100% {color:#ff89ed;}
+}
+#cake{
+    -webkit-animation-name: swageffect; /* Safari 4.0 - 8.0 */
+    -webkit-animation-duration: 1s;
+    animation-name: swageffect;
+    font-size: 60px;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    -webkit-animation-iteration-count: infinite;
+    font-size:70px;
+    color:#538ae2;
 }
