--- a/style.css
+++ b/style.css
@@ -73,6 +73,9 @@ li{
 #monkey{
         color:#2e227a;
 }
+#puppy{
+        color:#ef53c0;
+}
 @keyframes swageffect{
   0%  {color:#ff89ed;}
  25%  {color:#f5ff89;}
