--- a/style.css
+++ b/style.css
@@ -65,13 +65,16 @@ li{
 #pie{
         margin-left: 10px;
         color:#2e227a;
+        font-family: 'Barrio', cursive;
 }
 #cake{
         margin-left: 10px;
         color:#2e227a;
+        font-family: 'Barrio', cursive;
 }
 #monkey{
         color:#2e227a;
+        font-family: 'Barrio', cursive;
 }
 #puppy{
         color:#ef53c0;
